<resources>
    <string name="app_name">nomi</string>

    <string name="contacts">CONTACTS</string>
    <string name="share">SHARE w/ NFC</string>
    <string name="shareQR">SHARE w/ QR</string>
    <string name="profiles">PROFILES</string>
    <string name="settings">SETTINGS</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">E-mail</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="title_activity_nfc">NFCActivity</string>
    <string name="registration">Let us know you</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="title_activity_contact_details">ContactDetailsActivity</string>
    <string name="title_activity_profiles">ProfilesActivity</string>
    <string name="title_activity_profiles_detail">ProfilesDetailsActivity</string>
    <string name="title_activity_profiles_new">NewProfileActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="nfc_not_supported">It\'s time to get some NFC.</string>
    <string name="add_profile">Add new profile</string>
    <string name="attribute_type">Attribute</string>
    <string name="attribute_value">Write a new value</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="attribute_dialog_title">Change attribute</string>
    <string name="add_phone">Phone number</string>
    <string name="add_facebook">Facebook</string>
    <string name="add_email">Email</string>
    <string name="add_instagram">Instagram</string>
    <string name="add_linkedin">Linkedin</string>
    <string name="add_googleplus">Google plus</string>
    <string name="add_twitter">Twitter</string>
    <string name="update_email">Updated E-mail</string>
    <string name="update_fb">Updated Facebook URL</string>
    <string name="update_gplus">Updated Google Plus</string>
    <string name="update_instagram">Updated Instagram</string>
    <string name="update_linkedin">Updated LinkedIn</string>
    <string name="update_number">Updated phone number</string>
    <string name="update_twitter">Updated Twitter</string>
    <string name="no_contacts">No shared contacts yet</string>
    <string name="nfc_enabled">NFC is Enabled</string>
    <string name="error_json_profiles">Error fetching profiles</string>
    <string name="error_json_contacts">Error fetching contacts</string>
    <string name="please_login_toast">Please login before using this functionality</string>
    <string name="user_registered">User registered</string>
    <string name="you_shall_not_pass">You shall not pass!</string>
    <string name="empty_email">E-mail cannot be empty</string>
    <string name="empty_last_name">Last name cannot be empty</string>
    <string name="empty_first_name">First name cannot be empty</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="empty_password_confirmation">Password confirmation cannot be empty</string>
    <string name="passwords_not_match">Passwords do not match</string>
    <string name="invalid_email">E-mail is not valid</string>
    <string name="already_registered_email">E-mail is already registered</string>
    <string name="error_sharing">An error occurred. Contacts not shared.</string>
    <string name="you_just_met">You just met</string>
    <string name="create_profile">Create a Profile!</string>
    <string name="create_new_profile">CREATE</string>
    <string name="create_profile_title">Create profile</string>
    <string name="new_profile_name">Profile name</string>
    <string name="gcm_defaultSenderId">989010463284</string>
    <string name="updated_info">updated his/her contacts</string>
    <string name="get_in_touch">Take the opportunity to get in touch</string>
    <string name="created_new_profile">Created new profile</string>
    <string name="empty_profile_name">Profile name cannot be empty</string>
    <string name="empty_attribute_detail">Attribute value cannot be empty</string>
    <string name="edit_attribute_error">Error editing attribute</string>
    <string name="delete_attribute_error">Error deleting attribute</string>
    <string name="add_attribute_error">Error adding new attribute</string>
    <string name="edited_attribute">Edited attribute with success</string>
    <string name="add_attr_number">Add a number</string>
    <string name="added_attribute">Added new attribute</string>
    <string name="add_attr_text">Write a value</string>
    <string name="deleted_attribute">Attribute deleted with success</string>
    <string name="deleted_profile">Deleted profile with success</string>
    <string name="deleted_profile_error">Error deleting profile</string>
    <string name="nfc_share_profile_list">{fa-users} Profiles:</string>
    <string name="title_activity_qr">QRActivity</string>
    <string name="action_settings">Settings</string>
    <string name="tmpTextView">Hello World from section: %1$d</string>
    <string name="QRSharingTab">QR Sharing</string>
    <string name="QRScanTab">QR Scan</string>


</resources>
