<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.flaviofaria.kenburnsview.KenBurnsView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_background" />




    <EditText
        android:id="@+id/register_first_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/register_last_name"
        android:layout_alignEnd="@+id/btn_register"
        android:layout_alignLeft="@+id/btn_register"
        android:layout_alignRight="@+id/btn_register"
        android:layout_alignStart="@+id/btn_register"
        android:layout_marginBottom="5dp"
        android:hint="@string/first_name"
        android:fontFamily="sans-serif-thin"
        android:textColor="#ffffff"
        android:textColorHighlight="#ffffff"
        android:textColorHint="#dcdcdc"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/register_last_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/register_email"
        android:layout_alignEnd="@+id/btn_register"
        android:layout_alignLeft="@+id/btn_register"
        android:layout_alignRight="@+id/btn_register"
        android:layout_alignStart="@+id/btn_register"
        android:layout_marginBottom="5dp"
        android:hint="@string/last_name"
        android:fontFamily="sans-serif-thin"
        android:textColor="#ffffff"
        android:textColorHighlight="#ffffff"
        android:textColorHint="#dcdcdc"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/btn_register"
        android:layout_alignLeft="@+id/btn_register"
        android:layout_alignRight="@+id/btn_register"
        android:layout_alignStart="@+id/btn_register"
        android:layout_marginBottom="5dp"
        android:hint="@string/email"
        android:fontFamily="sans-serif-thin"
        android:textColor="#ffffff"
        android:textColorHighlight="#ffffff"
        android:textColorHint="#dcdcdc"
        android:layout_centerVertical="true"/>

    <EditText
        android:id="@+id/register_password1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/register_email"
        android:layout_alignEnd="@+id/btn_register"
        android:layout_alignLeft="@+id/btn_register"
        android:layout_alignRight="@+id/btn_register"
        android:layout_alignStart="@+id/btn_register"
        android:hint="@string/password"
        android:password="true"
        android:fontFamily="sans-serif-thin"
        android:textColor="#ffffff"
        android:textColorHighlight="#ffffff"
        android:textColorHint="#dcdcdc" />

    <EditText
        android:id="@+id/register_password2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/register_password1"
        android:layout_alignEnd="@+id/btn_register"
        android:layout_alignLeft="@+id/btn_register"
        android:layout_alignRight="@+id/btn_register"
        android:layout_alignStart="@+id/btn_register"
        android:layout_marginBottom="20dp"
        android:hint="@string/confirm_password"
        android:password="true"
        android:fontFamily="sans-serif-thin"
        android:textColor="#ffffff"
        android:textColorHighlight="#ffffff"
        android:textColorHint="#dcdcdc" />


    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_register"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp"
        fancy:fb_borderColor="#ffffff"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="#00000000"
        fancy:fb_focusColor="#20ffffff"
        fancy:fb_radius="5dp"
        fancy:fb_textFont="ProductSans-Regular.ttf"
        fancy:fb_text="REGISTER"
        fancy:fb_textColor="#FFFFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/registration"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-thin"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_marginTop="41dp" />


</RelativeLayout>