<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.flaviofaria.kenburnsview.KenBurnsView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_background" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/profile_photo"
        android:layout_marginTop="25dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        app:border="true"
        app:border_color="#ffffff"
        app:border_width="1dp"
        app:shadow="true"
        android:src="@drawable/gito" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Gito's Work Profile"
        android:fontFamily="sans-serif-thin"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_below="@+id/profile_photo"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"/>


    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/profile_phone"
        android:visibility="invisible"
        android:layout_height="40dp"
        android:layout_width="300dp"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:layout_alignLeft="@+id/profile_photo"
        android:fontFamily="sans-serif-thin"
        android:layout_below="@+id/profile_name"
        android:layout_alignStart="@+id/profile_photo" />


    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/profile_email"
        android:visibility="invisible"
        android:layout_height="40dp"
        android:layout_width="300dp"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/profile_name"
        android:fontFamily="sans-serif-thin"
        android:layout_alignLeft="@+id/profile_photo"
        android:layout_alignStart="@+id/profile_photo" />



    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/profile_facebook"
        android:visibility="invisible"
        android:layout_height="40dp"
        android:layout_width="300dp"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/profile_name"
        android:fontFamily="sans-serif-thin"
        android:layout_alignLeft="@+id/profile_photo"
        android:layout_alignStart="@+id/profile_photo" />


    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/profile_instagram"
        android:visibility="invisible"
        android:layout_height="40dp"
        android:layout_width="300dp"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/profile_name"
        android:fontFamily="sans-serif-thin"
        android:layout_alignLeft="@+id/profile_photo"
        android:layout_alignStart="@+id/profile_photo" />


    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/profile_linkedin"
        android:visibility="invisible"
        android:layout_height="40dp"
        android:layout_width="300dp"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/profile_name"
        android:fontFamily="sans-serif-thin"
        android:layout_alignLeft="@+id/profile_photo"
        android:layout_alignStart="@+id/profile_photo" />

    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/profile_googleplus"
        android:visibility="invisible"
        android:layout_height="40dp"
        android:layout_width="300dp"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/profile_name"
        android:fontFamily="sans-serif-thin"
        android:layout_alignLeft="@+id/profile_photo"
        android:layout_alignStart="@+id/profile_photo" />


    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/profile_twitter"
        android:visibility="invisible"
        android:layout_height="40dp"
        android:layout_width="300dp"
        android:layout_marginTop="35dp"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/profile_name"
        android:fontFamily="sans-serif-thin"
        android:layout_alignLeft="@+id/profile_photo"
        android:layout_alignStart="@+id/profile_photo" />


    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/multiple_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        fab:fab_addButtonColorPressed="@color/colorPrimary"
        fab:fab_addButtonPlusIconColor="@color/white"
        fab:fab_labelStyle="@style/menu_labels_style"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" >

        <com.getbase.floatingactionbutton.AddFloatingActionButton
            android:id="@+id/action_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.80"
            android:scaleY="0.80"
            fab:fab_size="mini"
            fab:fab_title="@string/add_twitter"
            fab:fab_colorPressed="@color/white_pressed" />

        <com.getbase.floatingactionbutton.AddFloatingActionButton
            android:id="@+id/action_googleplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.80"
            android:scaleY="0.80"
            fab:fab_size="mini"
            fab:fab_title="@string/add_googleplus"
            fab:fab_colorPressed="@color/white_pressed" />

        <com.getbase.floatingactionbutton.AddFloatingActionButton
            android:id="@+id/action_linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.80"
            android:scaleY="0.80"
            fab:fab_size="mini"
            fab:fab_title="@string/add_linkedin"
            fab:fab_colorPressed="@color/white_pressed" />

        <com.getbase.floatingactionbutton.AddFloatingActionButton
            android:id="@+id/action_instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.80"
            android:scaleY="0.80"
            fab:fab_size="mini"
            fab:fab_title="@string/add_instagram"
            fab:fab_colorPressed="@color/white_pressed" />

        <com.getbase.floatingactionbutton.AddFloatingActionButton
            android:id="@+id/action_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.80"
            android:scaleY="0.80"
            fab:fab_size="mini"
            fab:fab_title="@string/add_facebook"
            fab:fab_colorPressed="@color/white_pressed" />

        <com.getbase.floatingactionbutton.AddFloatingActionButton
            android:id="@+id/action_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.80"
            android:scaleY="0.80"
            fab:fab_size="mini"
            fab:fab_title="@string/add_email"
            fab:fab_colorPressed="@color/white_pressed" />

        <com.getbase.floatingactionbutton.AddFloatingActionButton
            android:id="@+id/action_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.80"
            android:scaleY="0.80"
            fab:fab_size="mini"
            fab:fab_title="@string/add_phone"
            fab:fab_colorPressed="@color/white_pressed"
            android:onClick="profile_add_phone"/>


    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>