<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context="com.example.ivosilva.nomi.menu.MenuFragment">

    <com.flaviofaria.kenburnsview.KenBurnsView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_background" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:id="@+id/fragment_menu_image"
        android:layout_centerVertical="true"
        android:src="@drawable/nomi_extended_white_logo"
        android:layout_marginTop="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_below="@id/fragment_menu_image"
    android:layout_centerVertical="true"    >

    <View
        android:layout_marginTop="50dp"
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:background="#40ffffff"
        android:layout_centerVertical="true"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingBottom="25dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="25dp"
        fancy:fb_textSize="14dp"
        fancy:fb_borderColor="#ffffff"
        fancy:fb_borderWidth="0dp"
        fancy:fb_defaultColor="#00000000"
        fancy:fb_textFont="ProductSans-Regular.ttf"
        fancy:fb_focusColor="#20ffffff"
        fancy:fb_radius="5dp"
        fancy:fb_text="@string/share"
        fancy:fb_textColor="#FFFFFF" />

    <View
        android:id="@+id/separator0"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:background="#40ffffff" />


    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_shareQR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingBottom="25dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="25dp"
        fancy:fb_textSize="14dp"
        fancy:fb_borderColor="#ffffff"
        fancy:fb_borderWidth="0dp"
        fancy:fb_defaultColor="#00000000"
        fancy:fb_textFont="ProductSans-Regular.ttf"
        fancy:fb_focusColor="#20ffffff"
        fancy:fb_radius="5dp"
        fancy:fb_text="@string/shareQR"
        fancy:fb_textColor="#FFFFFF" />



    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:background="#40ffffff" />



    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingBottom="25dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="25dp"
        android:layout_above="@+id/separator2"
        fancy:fb_textSize="14dp"
        fancy:fb_borderColor="#ffffff"
        fancy:fb_borderWidth="0dp"
        fancy:fb_defaultColor="#00000000"
        fancy:fb_textFont="ProductSans-Regular.ttf"
        fancy:fb_focusColor="#20ffffff"
        fancy:fb_radius="5dp"
        fancy:fb_text="@string/contacts"
        fancy:fb_textColor="#FFFFFF" />






    <View

        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:background="#40ffffff"
        android:layout_above="@id/btn_share"/>













    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_profiles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingBottom="25dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="25dp"
        android:layout_below="@+id/separator2"
        fancy:fb_textSize="14dp"
        fancy:fb_borderColor="#ffffff"
        fancy:fb_borderWidth="0dp"
        fancy:fb_defaultColor="#00000000"
        fancy:fb_textFont="ProductSans-Regular.ttf"
        fancy:fb_focusColor="#20ffffff"
        fancy:fb_radius="5dp"
        fancy:fb_text="@string/profiles"
        fancy:fb_textColor="#FFFFFF" />

    <View
        android:id="@+id/separator3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:background="#40ffffff"
        android:layout_below="@id/btn_profiles"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingBottom="25dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="25dp"
        android:layout_below="@+id/separator3"
        fancy:fb_textSize="14dp"
        fancy:fb_borderColor="#ffffff"
        fancy:fb_borderWidth="0dp"
        fancy:fb_defaultColor="#00000000"
        fancy:fb_textFont="ProductSans-Regular.ttf"
        fancy:fb_focusColor="#20ffffff"
        fancy:fb_radius="5dp"
        fancy:fb_text="@string/settings"
        fancy:fb_textColor="#FFFFFF" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:background="#40ffffff"
        android:layout_below="@id/btn_settings"/>
</LinearLayout>
</RelativeLayout>
